# recursion-schemes-extras

./: .gitignore  LICENSE  TAGS  recursion-schemes-extras.cabal  stack.yaml
src/Data/Functor/Foldable/: Extras.hs
