name:                recursion-schemes-extras
version:             0.1.0.0
synopsis:            Extra recursion schemes
description:         Please see README.md
homepage:            https://github.com/oisdk/recursion-schemes-extras#readme
license:             MIT
license-file:        LICENSE
author:              Donnacha Oisin Kidney
maintainer:          oisin.kidney@gmail.com
copyright:           2016 Donnacha Oisin Kidney
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Functor.Foldable.Extras
  build-depends:       base >= 4.7 && < 5
                     , recursion-schemes >= 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/oisdk/recursion-schemes-extras
